--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
 <body>
 
-    <button class="snipcart-add-item" data-item-id="2" data-item-name="Bacon" data-item-price="3.00" data-item-weight="20" data-item-url="/"
+    <button class="snipcart-add-item" data-item-id="2" data-item-name="Bacon" data-item-price="3.00" data-item-weight="20" data-item-url="https://luismasg.github.io/snipcarttest/"
         data-item-description="Some fresh bacon">
         Buy bacon
     </button>
     <button class="snipcart-add-item" data-item-id="1" data-item-name="Cheetos" data-item-price="4.00" data-item-weight="10"
-        data-item-url="/" data-item-description="Get some good cheetos">
+        data-item-url="https://luismasg.github.io/snipcarttest/" data-item-description="Get some good cheetos">
         chetos perrones
     </button>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
     <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="ZTk3YTc0NTItNDAzZi00YTcwLTkwMjMtOTIyZjkzMzQxZGFkNjM2NTUwMTQxNjM1MDgyNzk3"
