--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
 
-    <button class="snipcart-add-item" data-item-id="2" data-item-name="Bacon" data-item-price="3.00" data-item-weight="20" data-item-url="github.io"
+    <button class="snipcart-add-item" data-item-id="2" data-item-name="Bacon" data-item-price="3.00" data-item-weight="20" data-item-url="https://github.io"
         data-item-description="Some fresh bacon">
         Buy bacon
     </button>
     <button class="snipcart-add-item" data-item-id="1" data-item-name="Cheetos" data-item-price="4.00" data-item-weight="10"
-        data-item-url="github.io" data-item-description="Get some good cheetos">
+        data-item-url="https://github.io" data-item-description="Get some good cheetos">
         chetos perrones
     </button>
 
