--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 </head>
 
 <body>
+    <p style="text-align:center;margin:0 auto;width:100vw;padding-top:30px;">Test Cart to try out snipcart</h1>
+        <div style="display:flex;justify-content:space-evenly; padding:40px">
+            <button class="snipcart-add-item waves-effect waves-light btn" data-item-id="2" data-item-name="Bacon" data-item-price="3.00"
+                data-item-weight="20" data-item-url="https://github.io" data-item-description="Some fresh bacon">
+                Buy bacon
+            </button>
+            <button class="snipcart-add-item waves-effect waves-light btn" data-item-id="1" data-item-name="Cheetos" data-item-price="4.00"
+                data-item-weight="10" data-item-url="https://github.io" data-item-description="Get some good cheetos">
+                chetos perrones
+            </button>
 
-    <button class="snipcart-add-item" data-item-id="2" data-item-name="Bacon" data-item-price="3.00" data-item-weight="20" data-item-url="https://github.io"
-        data-item-description="Some fresh bacon">
-        Buy bacon
-    </button>
-    <button class="snipcart-add-item" data-item-id="1" data-item-name="Cheetos" data-item-price="4.00" data-item-weight="10"
-        data-item-url="https://github.io" data-item-description="Get some good cheetos">
-        chetos perrones
-    </button>
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="ZTk3YTc0NTItNDAzZi00YTcwLTkwMjMtOTIyZjkzMzQxZGFkNjM2NTUwMTQxNjM1MDgyNzk3"
+            id="snipcart"></script>
 
-    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="ZTk3YTc0NTItNDAzZi00YTcwLTkwMjMtOTIyZjkzMzQxZGFkNjM2NTUwMTQxNjM1MDgyNzk3"
-        id="snipcart"></script>
-
-    <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
+        <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
 </body>
 
 </html>
