--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
             </button>
             <button class="snipcart-add-item waves-effect waves-light btn" data-item-id="1" data-item-name="Cheetos" data-item-price="4.00"
                 data-item-weight="10" data-item-url="https://github.io" data-item-description="Get some good cheetos">
-                chetos perrones
+                cheetos
+            </button>
+
+            <button class="snipcart-add-item waves-effect waves-light btn" data-item-id="3" data-item-name="lettuce" data-item-price="6.00"
+                data-item-weight="5" data-item-url="https://github.io" data-item-description="start healthy">
+                spanish lettuce
             </button>
 
         </div>
