--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <p style="text-align:center;margin:0 auto;width:100vw;padding-top:30px;">Test Cart to try out snipcart</h1>
         <div style="display:flex;justify-content:space-evenly; padding:40px">
             <button class="snipcart-add-item waves-effect waves-light btn " data-item-id="2" data-item-name="Bacon" data-item-price="3.00"
-                data-item-weight="20" data-item-url="https://github.io" data-item-description="Some fresh bacon">
+                data-item-weight="20" data-item-url="https://luismasg.github.io/snipcarttest/" data-item-description="Some fresh bacon">
                 Buy bacon
             </button>
             <button class="snipcart-add-item waves-effect waves-light btn" data-item-id="1" data-item-name="Cheetos" data-item-price="4.00"
-                data-item-weight="10" data-item-url="https://github.io" data-item-description="Get some good cheetos">
+                data-item-weight="10" data-item-url="https://luismasg.github.io/snipcarttest/" data-item-description="Get some good cheetos">
                 cheetos
             </button>
 
             <button class="snipcart-add-item waves-effect waves-light btn" data-item-id="3" data-item-name="lettuce" data-item-price="6.00"
-                data-item-weight="5" data-item-url="https://github.io" data-item-description="start healthy">
+                data-item-weight="5" data-item-url="https://luismasg.github.io/snipcarttest/" data-item-description="start healthy">
                 spanish lettuce
             </button>
 
